# chat_room

./: CMakeLists.txt  README.md  chatlist.cpp  chatlist.h  chatlist.ui  clientcore.cpp  clientcore.h  electron打包.md  itemwidget.cpp  itemwidget.h  itemwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  wstest.cpp  wstest.h
